showing amount of the offers already consumed in the combination creation panel